5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1643_1055.log
== TEST (2019-04-15 12:07:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0,1):
-- ERROR:
File "XXXX", line 9
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:08:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
print(mensagem)
-- EXECUTION TIME:
0.181354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/1055/main.py", line 4, in <module>
    r=((v**2)*sin(2*a))/9.8
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:08:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    r=((v**2)*sin(2*a))/9.8
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:11:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v=float(input("velocidade inicial:"))
a= radians(float(input("angulo:")))
d= float(input("distancia:"))
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
print(mensagem)
-- EXECUTION TIME:
0.143786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/1055/main.py", line 5, in <module>
    a= radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:11:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v=float(input("velocidade inicial:"))
a= radians(float(input("angulo:")))
d= float(input("distancia:"))
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:11:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= float(input("velocidade inicial:"))
a= radians(float(input("angulo:")))
d= float(input("distancia:"))
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:12:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= float(input("velocidade inicial:"))
a= radians(float(input("angulo:")))
d= float(input("distancia:"))
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:12:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= float(input("velocidade inicial:"))
a= radians(float(input("angulo:")))
d= float(input("distancia:"))
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:12:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= float(input("velocidade inicial:"))
a= radians(float(input("angulo:")))
d= float(input("distancia:"))
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
print(mensagem)
-- EXECUTION TIME:
0.164236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/1055/main.py", line 5, in <module>
    a= radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:12:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= float(input("velocidade inicial:"))
a= radians(float(input("angulo:")))
d= float(input("distancia:"))
r=((v**2)*sin(2*a))/9.8

p= d - r

if(abs(p)<0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
